[metadata]
name = erlenberg_ext
version = 3.1
author = Tizian Erlenberg
author_email = mail@erlenberg.net
description = Some personal librarys for python (extended)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    cryptography

[options.entry_points]
console_scripts =
    erlenberg_ext_cryptscriptgenerator = erlenberg_ext.cryptScriptGenerator.__main__:main
    erlenberg_ext_crypttextgenerator = erlenberg_ext.cryptTextGenerator.__main__:main
